# speedy

./: .gitmodules  README.md
gui/: speedy_layout.json
iot/ansible/: inventory.ini
iot/ansible/distrobox/: 01_shell.yml  02_ros2_desktop.yml  main.yml
iot/ansible/files/: .zshrc  distrobox.ini  speedy.service
iot/ansible/host/: main.yml
iot/ansible/raspberrypi/: 01_base.yml  02_network.yml  03_shell.yml  04_ros2.yml  05_hardware.yml  06_extra_packages.yml  07_workspace.yml  08_service.yml  main.yml
iot/firmware/: platformio.ini
iot/firmware/include/: Constants.h  DriveControl.h  ROSComms.h  ROSManager.h  SystemState.h
iot/firmware/lib/Gamepad/: Gamepad.cpp  Gamepad.h
iot/firmware/lib/MotorController/: MotorController.cpp  MotorController.h
iot/firmware/lib/ROSCore/: ROSCore.cpp  ROSCore.h
iot/firmware/lib/SteeringController/: SteeringController.cpp  SteeringController.h
iot/firmware/src/: DriveControl.cpp  ROSComms.cpp  ROSManager.cpp  main.cpp
iot/scripts/host/: deploy_setup_to_pi.sh
iot/scripts/target_pi/: 01_first_boot.sh  02_network.sh  03_zsh_fastfetch.sh  04_ros2_jazzy.sh  05_hardware_gui.sh  SETUP_PI.md
iot/scripts/target_pi/dotfiles/: .p10k.zsh  .zshrc
iot/software/: .gitignore
iot/software/src/speedy_bringup/: CMakeLists.txt  package.xml
iot/software/src/speedy_bringup/launch/: core.launch.py  speedy.launch.py
iot/software/src/speedy_teleop/: CMakeLists.txt  package.xml
iot/software/src/speedy_teleop/launch/: teleop.launch.py
media/milestone-1/: bom.xlsx
